<resources>
    <string name="app_name">Minder</string>

    <!-- main message on splash screen -->
    <string name="title_splash_activity">Splash Screen</string>


    <string name="minder_id">Minder ID</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>

    <!-- Sign up screen -->
    <string name="Sign_in">Sign in</string>
    <string name="Sing_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="accept_terms_condition"><u>Accept terms and conditions</u></string>

    <!-- Congratulation screen -->
    <string name="congratulations">Congratulations</string>
    <string name="congr_text">You have been successfully registered and logged in the Minder Application. Please confirm your email by tapping the OK button</string>
    <string name="ok">OK</string>

    <!-- Homd screen -->
    <string name="home">Home</string>
    <string name="home_text">You are now connected to the service</string>
    <string name="disconnect">Disconnect</string>

    <!-- Error message-->
    <string name="firstname_error">First name is empty</string>
    <string name="lastname_error">Last name is empty</string>
    <string name="email_error">Email adress is incorrect</string>
    <string name="password_error">Password is empty</string>
    <string name="password_length_error">Password length is less then </string>
    <string name="confirm_error">Confirmed password doesn`t match to password</string>
    <string name="accept_terms_error">Terms and conditions do not confirm</string>
    <string name="successful">Successfull</string>
    <string name="location_stored">Location stored</string>
    <string name="id_is_incorrect">Id is incorrect</string>
    <string name="are_u_sure">Are you sure you what to disconnect?</string>
    <string name="connected">Connected to service</string>
    <string name="no_fused">No fused location provider available</string>
    <string name="no_location_profider_available">No location provider available</string>
    <string name="location_api_connection_error">Location API connection error</string>
    <string name="error_storing_location">ERROR STORING LOCATION:</string>
    <string name="settings_resolution_fail_msg">Settings resolution failed</string>
    <string name="connected_te_service">Connected to service via %s</string>
    <string name="func_disabled">Photo sync service %s</string>
    <string name="file_saved">File saved %s</string>
    <string name="error_getting_device_config">Error geting device configuration with message %s</string>
    <string name="success_created">successs created</string>
    <string name="upload_failed">File %1$s upload failed with message %2$s</string>
    <string name="no_connection">No network connection available</string>

</resources>
