<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name_FCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginBottom="15dp"
            style="@style/BaseEditText"/>

        <EditText
            android:id="@+id/last_name_FCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/last_name"
            style="@style/BaseEditText"/>

        <EditText
            android:id="@+id/email_FCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/email"
            style="@style/BaseEditText"/>

        <EditText
            android:id="@+id/password_FCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            style="@style/BaseEditText"/>

        <EditText
            android:id="@+id/confirm_password_FCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/confirm_password"
            style="@style/BaseEditText"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_condition"
                android:textColor="@color/grey_900"
                style="@android:style/Widget.Holo.CompoundButton.CheckBox"
                android:paddingLeft="5dp"
                android:id="@+id/accept_CB_FCA"
                android:typeface="normal" />

            <ImageButton
                android:id="@+id/button_signup_FCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sign_up"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/button_margin_top"
                style="@style/ButtonStyle"
                android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>