<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding">

    <TextView
        android:id="@+id/congratulations_title_FC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:gravity="center_horizontal"
        style="@style/CongratulationTitle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/congratulations_text_FC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/congr_text"
        style="@style/TextMedium"/>

    <Button
        android:id="@+id/ok_button_FC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="@style/ButtonStyle"/>


</LinearLayout>